@@ -7,7 +7,6 @@ noinst_LTLIBRARIES = libaudio.la
 libaudio_la_SOURCES = base_k3baudiocdtextwidget.ui base_k3baudiotrackwidget.ui k3baudiojob.cpp k3baudiotrackdialog.cpp k3baudioburndialog.cpp k3baudioview.cpp k3baudiotrack.cpp k3baudiodoc.cpp k3baudiotrackviewitem.cpp k3baudiotrackview.cpp k3baudiodatasourceviewitem.cpp k3baudiofile.cpp k3baudiozerodata.cpp k3baudiodatasource.cpp k3baudiocdtextwidget.cpp k3baudionormalizejob.cpp k3baudiojobtempdata.cpp k3baudioimager.cpp k3baudioeditorwidget.cpp k3baudiotrackwidget.cpp k3baudiotracksplitdialog.cpp k3baudiotrackplayer.cpp k3baudiomaxspeedjob.cpp k3baudiocdtracksource.cpp k3baudiocdtrackdrag.cpp
 
 include_HEADERS = 	k3baudiodoc.h \
-			k3baudioview.h \
 			k3baudiojob.h \
 			k3baudiocdtrackdrag.h \
 			k3baudiotrack.h \
