@@ -11,4 +11,10 @@ noinst_LTLIBRARIES = libdata.la
 
 libdata_la_SOURCES = base_k3bdataimagesettings.ui base_k3badvanceddataimagesettings.ui base_k3bdatavolumedescwidget.ui base_k3bbootimageview.ui k3bdatapropertiesdialog.cpp k3bdatadirtreeview.cpp k3bdatafileview.cpp k3bdataburndialog.cpp k3bdatajob.cpp k3bdataview.cpp k3bdatadoc.cpp k3bdataitem.cpp k3bdiritem.cpp k3bfileitem.cpp k3bdataviewitem.cpp k3bdataimagesettingswidget.cpp k3bdataadvancedimagesettingswidget.cpp k3bdatavolumedescwidget.cpp k3bisoimager.cpp k3bbootimagedialog.cpp k3bbootimageview.cpp k3bmsinfofetcher.cpp k3bbootitem.cpp k3bisooptions.cpp k3bfilecompilationsizehandler.cpp k3bdataverifyingjob.cpp k3bsessionimportitem.cpp
 
-include_HEADERS = k3bdatadoc.h k3bdatajob.h k3bdataitem.h k3bdiritem.h k3bfileitem.h k3bdataview.h k3bbootitem.h k3bisooptions.h
+include_HEADERS = 	k3bdatadoc.h \
+			k3bdatajob.h \
+			k3bdataitem.h \
+			k3bdiritem.h \
+			k3bfileitem.h \
+			k3bbootitem.h \
+			k3bisooptions.h
