@@ -15,6 +15,11 @@ METASOURCES = AUTO
 
 noinst_LTLIBRARIES = libmixed.la
 
-libmixed_la_SOURCES = k3bmixedview.cpp k3bmixeddoc.cpp k3bmixedburndialog.cpp k3bmixedjob.cpp k3bmixeddirtreeview.cpp
+libmixed_la_SOURCES = 	k3bmixedview.cpp \
+			k3bmixeddoc.cpp \
+			k3bmixedburndialog.cpp \
+			k3bmixedjob.cpp \
+			k3bmixeddirtreeview.cpp
 
-include_HEADERS = k3bmixeddoc.h k3bmixedview.h k3bmixedjob.h
+include_HEADERS = 	k3bmixeddoc.h \
+			k3bmixedjob.h
